@@ -1,3 +1,12 @@
+2008-10-27  Federico Mena Quintero  <federico@novell.com>
+
+	Fix a possible leak of menus:
+
+	* tile.c (tile_finalize): Actually destroy the context menu, don't
+	ref/sink it.
+	(tile_set_property): Attach the context menu to the tile, don't
+	just store its pointer.
+
 2008-09-22  Scott Reeves  <sreeves@novell.com>
 	* document-tile.c:
 	show remote docs - use gio for tooltip, show icon
